dataset1235/2025-2/610742602/users/1606503414/executions/677928262_1927446959.log
== RUN (2025-08-28 21:23:34)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:14:19)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:19:25)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:17:54)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:16:16)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:21:16)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:21:13)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:21:42)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:13:04)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:07:05)
-- CODE: 
N= float(input("Insira o numero:"))



-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Insira o numero:
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Insira o numero:
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Insira o numero:
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Insira o numero:
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Insira o numero:
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Insira o numero:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:23:33)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:18:24)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:35:45)
-- CODE: 
N= float (input("Insira o numero:"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Insira o numero:
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Insira o numero:
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Insira o numero:
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Insira o numero:
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Insira o numero:
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Insira o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:54:27)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(K,2))
print(round(L,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:21:39)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:14:30)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:13:21)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:20:53)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:16:14)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:07:10)
-- CODE: 
N= float(input("Insira o numero:"))



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Insira o numero:
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Insira o numero:
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Insira o numero:
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Insira o numero:
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Insira o numero:
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Insira o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:14:35)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:21:20)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:37:06)
-- CODE: 
N= float (input("Insira o numero:"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Insira o numero:
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Insira o numero:
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Insira o numero:
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Insira o numero:
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Insira o numero:
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Insira o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:18:27)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:18:15)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:18:29)
-- CODE: 
N= float(input("Insira o numero:"))

O= N* (27/100)
K= N + N* (42/100)
L= N - N*(63/100)

print(round(O,2))
print(round(k,2))
print(round(L,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(k,2))
                ^
NameError: name 'k' is not defined. Did you mean: 'K'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:36:04)
-- CODE: 
N= float (input("Insira o numero:"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Insira o numero:
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Insira o numero:
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Insira o numero:
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Insira o numero:
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Insira o numero:
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Insira o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:36:24)
-- CODE: 
N= float (input("Insira o numero:"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Insira o numero:
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Insira o numero:
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Insira o numero:
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Insira o numero:
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Insira o numero:
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Insira o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
